# agentic-kg

./: .env.example  .gcloudignore  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SERVICE_INVENTORY.md  architecture.html  backlog.md  cloudbuild.yaml  feed.xml  index.html  progress.html  pyproject.toml  sprints.html
.claude/: settings.json
.claude/commands/: generate-tests.md  review.md  session-review.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/scripts/: README.md  generate_docs.py  generate_site_data.py
.github/workflows/: build-images.yml  code-review.yml  deploy-branch.yml  deploy-master.yml  deploy-tag.yml  governance-checks.yml  integration-tests.yml  preview-docs.yml  smoke-ingest.yml  test.yml  update-docs.yml
about/: architecture.html  related-work.html  roadmap.html
assets/css/: just-the-docs-dark.css  just-the-docs-dark.css.map  just-the-docs-default.css  just-the-docs-default.css.map  just-the-docs-light.css  just-the-docs-light.css.map
assets/js/: just-the-docs.js  search-data.json
construction/: README.md
construction/backlog/: sprint-01-deferred.md
construction/design/: README.md  canonical-problem-architecture-phase-2.md  canonical-problem-architecture.md  code-review-system.md  construction-agent.md  deployment-infrastructure.md  kg-options-comparison.md  kg-schema-enhancement-gap-analysis.md  memory-agent.md  phase-1-knowledge-graph.md  system-architecture.md
construction/requirements/: README.md  canonical-problem-architecture-requirements.md  data-acquisition-requirements.md  extraction-pipeline-requirements.md  knowledge-graph-requirements.md  sprint-02-requirements.md
construction/sprints/: README.md  sprint-00-gcp-deployment.md  sprint-01-knowledge-graph.md  sprint-02-data-acquisition.md  sprint-03-extraction-pipeline.md  sprint-04-api-and-ui.md  sprint-05-agent-implementation.md  sprint-06-integration.md  sprint-07-e2e-testing.md  sprint-08-documentation-and-cleanup.md  sprint-09-canonical-problem-phase-1.md  sprint-10-canonical-problem-phase-2.md
deploy/: deployment-manifest.yaml
deploy/environments/: dev.yaml  production.yaml  staging.yaml
design/: ci-smoke-test.html  d1-ingest-real-papers.html  d1a-cloud-run-jobs.html  e1-topic-entities.html  e2-research-concepts.html  e3-model-entities.html  e4-method-entities.html  e5-citation-graph.html  e6-entity-descriptions.html  e7-cross-entity-normalization.html  e8-extraction-prompt-expansion.html  enhance-github-pages.html  entity-pipeline-orchestration.html  index.html
docker/: .env.example  Dockerfile.api  Dockerfile.base  Dockerfile.job  Dockerfile.ui  Dockerfile.worker  docker-compose.yml
docs/: Gemfile  SERVICE_INVENTORY.md  _config.yml  backlog.md  governance-delta.md  index.html  index.md  progress.html  sprints.html
docs/_includes/: backlog-table.html  sprint-list.html  status-badge.html
docs/about/: architecture.md  (+8 more)
ground-truth/: README.md
infra/: README.md  deploy.sh  main.tf  outputs.tf  providers.tf  variables.tf
memory-bank/: README.md  activeContext.md  architecturalDecisions.md  phases.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
reference/: entity-catalog.html  topic-taxonomy.html
scripts/: assert_deploy_parity.sh  fetch_paper.py  gh-wrapper  github-cli.py  import_papers.py  load_sample_problems.py  setup_wif_deploy.sh  smoke_assert.py  smoke_test.py  test_schema_migration.py
status/: backlog.html  index.html  service-inventory.html  sprints.html
(+228 files in other folders)
