[project]
name = "agentic-kg"
version = "0.1.0"
description = "Agentic Knowledge Graphs for Research Progression"
authors = [
    { name = "DJ Jay" }
]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["knowledge-graph", "research", "agents", "llm", "scientific-discovery"]

dependencies = [
    "denario>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages/core/src/agentic_kg"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
