[project]
name = "agentic-kg"
version = "0.1.0"
description = "Agentic Knowledge Graphs for Research Progression"
authors = [
    { name = "DJ Jay" }
]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["knowledge-graph", "research", "agents", "llm", "scientific-discovery"]

dependencies = [
    # denario removed (SM-4): never imported anywhere in the repo, and it
    # transitively hard-pins openai==1.99.9 (via cmbagent-autogen), which
    # conflicts with instructor>=1.14's openai>=2.0 and breaks entity
    # extraction. See llm/features/extraction-dep-pinning.md.
    "neo4j>=5.0.0",
    "pydantic>=2.0.0",
    "openai>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio",
    "testcontainers[neo4j]",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages/core/src/agentic_kg"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages/core/tests", "packages/api/tests"]
markers = [
    "e2e: end-to-end tests against live services (requires staging env vars)",
    "slow: tests that take >10 seconds",
    "costly: tests that incur API costs (LLM calls)",
    "integration: integration tests requiring external services (Neo4j, APIs)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
